--- a/Food App/package.json
+++ b/Food App/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.9.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.31",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.5"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0"
   }
 }
